--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 * On page with subpages, add subpages to navigation.
 * Breadcrumb navigation when on subpage.
 * HTTP Error Pages
-* Registration form.
+* User authorisation levels
 * On Logging in or out, redirect back to last page?
 * Article edit form.
 * Article generate form.
